--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body ng-app="linkr" ng-controller="MainCtrl">
 	<div ng-repeat="post in posts">
-		{{post}}
-	</div>	
+		{{post.title}} - Upvotes: {{post.upvotes}} 
+	</div>
+	<button ng-click="addPost()">Post</button>	
 </body>
 </html>
+
