--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html>
 <head>
 	<title>Linkr</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.min.js"></script>
 	<script src="app.js"></script>
 </head>
-<body ng-app="linkr" ng-controller="MainCtrl">
-	<div ng-repeat="post in posts">
-		{{post.title}} - Upvotes: {{post.upvotes}} 
+<body class="container" ng-app="linkr" ng-controller="MainCtrl">
+	<div ng-repeat="post in posts | orderBy:'-upvotes'">
+		<span ng-click="incrementUpvotes(post)">^</span>
+		<a ng-show="post.link" href="{{post.link}}">
+			{{post.title}}
+		</a>
+		<span ng-hide="post.link">
+			{{post.title}}
+		</span>	
+		- Upvotes: {{post.upvotes}} 	 
 	</div>
-	<button ng-click="addPost()">Post</button>	
+	<form ng-submit="addPost">
+		<input type="text" class="form-control" placeholder="Title" ng-model="title"></input>
+		<br>
+		<input type="text" class="form-control" placeholder="Link" ng-model="link"></input>
+		<br> 
+		<button class="btn btn-success" ng-click="addPost()">Post</button>
+	</form>		
 </body>
 </html>
 
