--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
 	<title>Linkr</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<link rel="stylesheet" type=text/css href="style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
 	<script src="app.js"></script>
 </head>
-<body class="container" ng-app="linkr" ng-controller="MainCtrl">
+<body class="container" ng-app="linkr">
+	<ui-view></ui-view>
+	<script type="text/ng-template" id="/home.html">
+	<h1>Linkr</h1>
+	<h2>Share Your Favourite Hacker Links</h2>
 	<div ng-repeat="post in posts | orderBy:'-upvotes'">
 		<span ng-click="incrementUpvotes(post)">^</span>
 		<a ng-show="post.link" href="{{post.link}}">
@@ -23,7 +29,8 @@
 		<input type="text" class="form-control" placeholder="Link" ng-model="link"></input>
 		<br> 
 		<button class="btn btn-success" ng-click="addPost()">Post</button>
-	</form>		
+	</form>	
+	</script>	
 </body>
 </html>
 
